# gzram

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  create.sh  expand_files.py  setup_drivers.sh
gpu/: CMakeLists.txt  example.cu  example.cuh  gpu_comp.cu  main.cu  naive.cu  naive.cuh  test.cu
profiling/: profile_bdev.py
server/: CMakeLists.txt  gzram.c  gzram.h  gzram_server.c  time_util.h
tests/: CMakeLists.txt  read_from_zspool.c  test_clear.c  test_write_read.c  test_write_read_file.c
zspool/: Makefile  zspool_drv.c  zspool_drv.h
